--- a/sample/src/main/res/layout/ac_sample_1.xml
+++ b/sample/src/main/res/layout/ac_sample_1.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="16dp"
         android:textColor="@color/cpb_white"
         android:textSize="18sp"
-        app:cpb_cornerRadius="48dp"
+        app:cpb_cornerRadius="@dimen/dp750_48"
         app:cpb_iconComplete="@drawable/ic_action_accept"
         app:cpb_iconError="@drawable/ic_action_cancel"
         app:cpb_textIdle="@string/Upload" />
